--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <title>Psk. Dan. Berra Ozcakal Shahin</title>
+    <title>Psikolojik Danışman Berra Shahin</title>
   </head>
   <body>
     <!-- This is the root div where your entire React app will be rendered -->
